Changed the max file size to -1 so that the website does not crash and the app handles the errors itself. Also changed the css so that the image no longer overlaps the error message.

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -267,7 +267,6 @@ nav ul li a:hover, nav ul li input[type="submit"]:hover {
 
 #form .plant-image-container {
     max-width: 100px;
-    max-height: 70px;
     border-radius: 4px;
     position: relative;
 }
